[gd_scene load_steps=11 format=3 uid="uid://6ful5pbx4dnn"]

[ext_resource type="Script" path="res://Scenes/Testing/testscript.gd" id="1_pbt6n"]
[ext_resource type="Texture2D" uid="uid://cst6rrpc2deng" path="res://Assets/MainCharacter/BlobAnim.png" id="2_giwd8"]
[ext_resource type="Script" path="res://Scenes/Testing/Camera2D.gd" id="3_m1re7"]

[sub_resource type="Animation" id="Animation_igpi6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ms7dt"]
resource_name = "dash"
length = 1.5
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.051347, 0.0963491, 0.749559, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_mp235"]
resource_name = "idle"
length = 0.9
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_bpyrf"]
resource_name = "jump"
length = 1.7
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_nnn16"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilvlq"]
_data = {
"RESET": SubResource("Animation_igpi6"),
"dash": SubResource("Animation_ms7dt"),
"idle": SubResource("Animation_mp235"),
"jump": SubResource("Animation_bpyrf"),
"run": SubResource("Animation_nnn16")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myaxl"]
size = Vector2(178, 79)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_pbt6n")
move_speed = null
jump_force = null
gravity = null
dash_speed = null
max_dash_time = null

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_giwd8")
hframes = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ilvlq")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
limit_bottom = 200
script = ExtResource("3_m1re7")
player = NodePath("..")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -200.0
offset_top = -370.0
offset_right = 190.0
offset_bottom = -88.0
theme_override_font_sizes/font_size = 60
text = "Line 1
Line 2
Line 3
"

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(-4, 53.5)
shape = SubResource("RectangleShape2D_myaxl")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
